Small correction lecture 12

--- a/eae0310-12-taxacao-poupanca.html
+++ b/eae0310-12-taxacao-poupanca.html
@@ -232,7 +232,7 @@ Assim como na taxação do trabalho, a **taxação de capital** (poupança) envo
 1. *Efeito substituição:* o imposto torna o consumo no período 2 mais caro relativo ao consumo no período 1: poupança cai
 2. *Efeito renda:* o imposto torna os indivíduos mais pobres, que consomem menos em `\(t=1\)` *e* em `\(t=2\)`, mas como `\(s = wl - c_1\)`, `\(c_1\)` menor implica que a poupança sobe
 
-Assim, o efeito *sobre a poupança* é teoricamente **ambíguo**! Na verdade, se a utilidade é Cobb-Douglas, os dois efeitos se anulam e o impacto do imposto na poupança vai ser exatamente zero
+Assim, o efeito *sobre a poupança* é teoricamente **ambíguo**! Na verdade, se a utilidade é log no consumo, os dois efeitos se anulam e o impacto do imposto na poupança vai ser exatamente zero
 
 ---
 class: middle
