Small correction lectures 12 and 14

--- a/eae0310-14-imposto-corporativo.html
+++ b/eae0310-14-imposto-corporativo.html
@@ -33,6 +33,14 @@ class: inverse, middle, center
 
 # Impostos corporativos
 
+
+---
+class: middle
+
+&lt;img src="figs/eae0310-12-19.png" width="50%" style="display: block; margin: auto;" /&gt;
+
+O Brasil tem taxação corporativa [comparativamente alta](https://taxsummaries.pwc.com/quick-charts/corporate-income-tax-cit-rates), chegando a 34% (ver slide aula 12); por outro lado, não tributa a distribuição de dividendos &amp;mdash; note que alguns países têm taxas corporativas regionais (nos EUA por volta de 4% e no Canadá chegando a 15%), enquanto o Brasil só cobra impostos corporativos ao nível federal
+
 ---
 class: middle
 ## Corporações
