Small changes lectures 14

--- a/eae0310-13-imposto-riqueza.html
+++ b/eae0310-13-imposto-riqueza.html
@@ -247,9 +247,9 @@ A ideia é que no modelo de Tiebout as pessoas "votam com os pés", e por isso a
 class: middle
 ## Evidência empírica
 
-[AZ21] estimam a elasticidade da receita em relação à taxa sobre ganhos de capital em entre -0,5 e -0,3, negando o argumento comum que cortes no imposto "se pagariam": a taxação que maximiza receita é entre 38-47%
+Nos EUA de 1980-2006, a elasticidade da realização de ganhos em relação à tributação esteve entre -0,5 e -0,3, negando o argumento que cortes no imposto "se pagariam": a taxação que maximiza receita é entre 38-47% [AZ21]
 
-[GI18] e [Glo21] estimam elasticidades da riqueza tributável em relação a taxação de heranças baixas: 0,27 e 0,1, respectivamente
+As elasticidades da riqueza tributável em relação a taxação de heranças parecem ainda mais baixas empiricamente: 0,27 e 0,1 em [GI18] e [Glo21], respectivamente
 
 [Kop07] compara a herança deixada por mortes "de repente" com pessoas com doença terminal longa, e acha riqueza reportada 10-18% menor para doenças longas (meses ou anos) e 5-10% para doenças curtas (dias ou semanas) 
 
@@ -288,7 +288,7 @@ class: middle
 
 &lt;img src="figs/eae0310-13-1.png" width="70%" /&gt;
 
-A motivação da **taxação de riqueza** é que outras formas de tributação, mesmo de capital e heranças, têm alcance limitado sobre o 0.01% mais rico, tornando o sistema regressivo no (extremo) topo da distribuição &amp;mdash; algo que defensores desse imposto dizem que ele resolveria (Saez)
+A motivação da **taxação de riqueza** é que outras formas de tributação, mesmo de capital e heranças, têm alcance limitado sobre o 0.01% mais rico, tornando o sistema regressivo no *extremo* topo da distribuição &amp;mdash; algo que defensores desse imposto dizem que ele resolveria (Saez)
 
 ---
 class: middle
@@ -378,7 +378,7 @@ Na Suíça, uma redução de 1p.p. (bastante!) no imposto aumentou a riqueza rep
 
 Na Dinamarca, uma redução de 1p.p. aumentou riqueza reportada em 21% em 8 anos &amp;mdash; metade do efeito é *mecânico*, já que uma taxa maior reduz a riqueza mesmo sem alteração comportamental
 
-Similarmente, nos Países Baixos uma redução de 1p.p. aumentou a riqueza reportada em 14% &amp;mdash; mas pesquisa para a Suécia acha um valor muito menor de 0.1-0.27%
+A evidência para outros países é de efeitos menores: nos Países Baixos uma redução de 1p.p. aumentou a riqueza reportada em 14%, e na Suécia houve um efeito quase nulo de 0.1-0.27%
 
 ---
 class: middle
@@ -388,7 +388,7 @@ Um efeito possível da taxação de riqueza é reduzir o empreendedorismo (69% d
 
 Entretanto, se esse imposto reduzir a acumulação de capital, no longo prazo pode reduzir a taxa de salários
 
-Taxação de riqueza também pode incentivar emigração: a evidência é que esse efeito é significativo, mas nela o imposto é regional (e na Espanha o efeito veio inteiramente de declaração fraudulenta)
+Taxação de riqueza também pode incentivar emigração: a evidência é que esse efeito é significativo, mas ela vem de onde o imposto é regional (e na Espanha o efeito veio inteiramente de declaração fraudulenta)
 
 ---
 class: middle
@@ -401,9 +401,9 @@ Uma redução do imposto de riqueza de 2,2% para 1% para casais, na Dinamarca em
 class: middle
 ## Elisão e evasão fiscal
 
-Quando a Espanha deu isenção do imposto sobre riqueza para algumas formas de sociedades fechadas, sua proporção subiu de 15% para 77% das empresas de capital fechado
+Quando a Espanha deu isenção do imposto sobre riqueza para algumas formas de sociedades fechadas (e não para outras), sua proporção subiu de 15% para 77% das empresas de capital fechado
 
-Isso pode gerar significativas distorções econômicas, na medida que firmas tentem esconder o patrimônio de seus donos mantendo o capital fechado, mesmo quando abrir fosse eficiente
+Essa forma de elisão fiscal pode gerar significativas distorções econômicas, na medida que firmas tentem esconder o patrimônio de seus donos mantendo o capital fechado, mesmo quando abrir fosse eficiente
 
 A implementação desse imposto também poderia plausivelmente intensificar a sonegação fiscal de riqueza em paraísos fiscais, que já representam 3-8% da riqueza mundial
 
@@ -420,7 +420,7 @@ class: middle
 
 A princípio, desigualdade de riqueza poderia ser aliviada por uma taxação de riqueza única e inesperada, que é efetivamente **lump-sum**
 
-Por ser *única e inesperada*, ela não distorce comportamento &amp;mdash; de fato, lucro sobre capital já investido é **lucro econômico**, e taxação de lucro econômico não é distorciva
+Por ser *única e inesperada*, ela não distorce comportamento &amp;mdash; de fato, lucro sobre capital já investido é **lucro puro**, e taxação de lucro econômico não é distorciva
 
 Essa política, entretanto, só funciona se for de fato única (e os agentes acreditarem que será única): na prática, frequentemente se tornam políticas de longo-prazo ou acontecem repetidamente, inviabilizando esse argumento
 
