--- a/eae0310-14-imposto-corporativo.html
+++ b/eae0310-14-imposto-corporativo.html
@@ -119,9 +119,9 @@ Ou seja, é equivalente a um imposto sobre a receita com deduções para os cust
 class: middle
 ## Motivos para a taxação de renda corporativa
 
-Mas isso só vale se taxarmos o *lucro econômico* levando em conta o **custo de oportunidade** dos fatores, enquanto a taxação corporativa é sobre o *lucro contábil*, que leva em conta preços
+Agora note que isso só vale se taxarmos o *lucro econômico* levando em conta o **custo de oportunidade** dos fatores, enquanto a taxação corporativa é sobre o *lucro contábil*, que leva em conta preços
 
-Outro motivo é que sem a taxação de lucros corporativos, **lucros retidos** poderiam se acumular livres de impostos eternamente dentro da firma, sendo distribuídos no futuro com tributação apenas no auferimento
+Um motivo para tributar renda corportativa é que sem ela **lucros retidos** poderiam se acumular livres de impostos eternamente dentro da firma, sendo distribuídos no futuro com tributação apenas no auferimento
 
 Ao taxar outras formas de renda do capital (dividendos, juros, ganhos de capital) mas não lucros retidos isso gera um subsídio implícito para a *renda corporativa* em relação a outras formas de poupança (e.g. ações)
 
@@ -165,7 +165,17 @@ class: middle
 
 &lt;img src="figs/eae0310-14-5.png" width="50%" /&gt;&lt;img src="figs/eae0310-14-6.png" width="50%" /&gt;
 
-Efeitos de uma taxação corporativa sem (a) e com (b) dedução para depreciação do capital: no 1o caso, ela diminui o produto marginal do capital, reduzindo o investimento; no 2o, o abatimento de gastos com *depreciação econômica* diminue o custo de financiamento, com efeito ambíguo [Gru16]
+Efeitos de uma taxação corporativa sem (a) e com (b) dedução para depreciação do capital: no 1o caso, ela diminui o produto marginal do capital, reduzindo o investimento; no 2o, o abatimento de gastos com *depreciação econômica* `\(\delta\)` diminue o custo de financiamento `\(\delta + \rho\)`, onde `\(\rho\)` é o *dividend yield*, com efeito ambíguo [Gru16]
+
+---
+class: middle
+## Taxação corporativa efetiva
+
+Um imposto corporativo com política de depreciação gera uma **taxação corporativa efetiva**: o aumento percentual na taxa de retorno antes de impostos para cobrir a taxação, que vai ser menor que a estatutária
+
+Por exemplo, se o custo de capital for de 20%, e a taxa corporativa de 35%, sem deduções para depreciação, então o investimento precisa de uma taxa interna de retorno de `\(0.2/(1 - 0.35) = 30.7\%\)` para valer a pena
+
+E daí a taxa corporativa efetiva é dada por: `$$ETR = \frac{r_{\text{com imposto}} - r_{\text{sem imposto}}}{r_{\text{com imposto}}}$$`
 
 ---
 class: middle
