New figure lecture 14

--- a/eae0310-1-introducao.html
+++ b/eae0310-1-introducao.html
@@ -4,7 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
-    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.15/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -12,10 +12,18 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # EAE-0310: ECONOMIA DO SETOR PÚBLICO
+]
+.author[
 ### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 217/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
+]
+.institute[
 ### Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo
+]
+.date[
 ### Aula 1: Análise normativa<br/>2022/1
+]
 
 ---
 
@@ -138,7 +146,7 @@ O Brasil é mais desigual que qualquer outra grande economia (5º maior do mundo
 class: middle
 ## 2. Como o governo pode intervir na economia?
 
-Por exemplo, digamos que o governo queira incentivar a produção de bens desejáveis ou desicentivar de indesejáveis (e.g. saúde), ele pode: 
+Por exemplo, digamos que o governo queira incentivar a produção de bens desejáveis (e.g. saúde) ou desicentivar de indesejáveis, ele pode: 
 
 1. Intervir no mecanismo de preços (incentivos dos agentes) por meio de taxação (ou subsídios)
 2. Proibir ou obrigar diretamente o consumo de dado bem (a ser oferecido usualmente pelo mercado)
@@ -587,6 +595,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
