--- a/eae0310-12-taxacao-poupanca.html
+++ b/eae0310-12-taxacao-poupanca.html
@@ -180,6 +180,13 @@ No mundo real, quando 50% da riqueza está com o 1% mais rico, é difícil acred
 ---
 class: middle
 
+&lt;img src="figs/eae0310-12-20.png" width="90%" style="display: block; margin: auto;" /&gt;
+
+A suavização de consumo com um perfil hiperbólico de renda ao longo da vida implica um **ciclo-da-vida** na acumulação de riqueza: com poupança positiva na idade ativa e acúmulo de riqueza, que depois é gasta inteiramente na aposentadoria
+
+---
+class: middle
+
 &lt;img src="figs/eae0310-12-14.png" width="50%" /&gt;&lt;img src="figs/eae0310-12-14b.png" width="50%" /&gt;
 
 Na Dinamarca, observamos um perfil de riqueza mais ou menos compatível com a **hipótese do ciclo-da-vida** na população com riqueza positiva em geral (a), com riqueza crescendo nos anos ativos e caindo na aposentadoria (mas menos do que deveria) &amp;mdash; mas o mesmo movimento não ocorre entre os mais ricos, cuja riqueza cresce até o fim da vida (b) [Jak+20] 
