--- a/eae0310-14-imposto-corporativo.html
+++ b/eae0310-14-imposto-corporativo.html
@@ -4,7 +4,7 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -39,7 +39,7 @@ class: middle
 
 &lt;img src="figs/eae0310-12-19.png" width="50%" style="display: block; margin: auto;" /&gt;
 
-O Brasil tem taxação corporativa [comparativamente alta](https://taxsummaries.pwc.com/quick-charts/corporate-income-tax-cit-rates), chegando a 34% (ver slide aula 12); por outro lado, não tributa a distribuição de dividendos &amp;mdash; note que alguns países têm taxas corporativas regionais (nos EUA por volta de 4% e no Canadá chegando a 15%), enquanto o Brasil só cobra impostos corporativos ao nível federal
+O Brasil tem taxação corporativa [comparativamente alta](https://taxsummaries.pwc.com/quick-charts/corporate-income-tax-cit-rates), chegando a 34% (ver slide aula 12); por outro lado, não tributa a distribuição de dividendos &amp;mdash; note que alguns países têm taxas corporativas regionais (nos EUA por volta de 4% e no Canadá chegando a 15%), enquanto o Brasil só cobra impostos corporativos ao nível federal [BMA20]
 
 ---
 class: middle
@@ -282,6 +282,13 @@ A visão moderna é que investimento das empresas se dá majoritariamente por *l
 ---
 class: middle
 
+&lt;img src="figs/eae0310-14-21.png" width="80%" /&gt;
+
+Fontes de financiamento das empresas (não-financeiras) americanas (% do total) &amp;mdash; quase todo o financiamento do investimento na prática vem de lucros retidos e fundos para depreciação: assim, taxação de dividendos tem pouco efeito sobre o custo de financiamento das firmas [BMA20]
+
+---
+class: middle
+
 &lt;img src="figs/eae0310-14-3.png" width="70%" /&gt;
 
 Nos EUA, o único efeito do corte de 23p.p. na taxação de dividendos em 2003 foi maior pagamento de dividendos a acionistas, comparando um grupo de empresas afetada (C-corps) com empresas não afetadas (S-corps) [Yag15]
@@ -432,16 +439,15 @@ class:middle
 Innovation in the Twentieth Century*". In: _The Quarterly Journal of
 Economics_ 137.1 (2022), pp. 329-385.
 
+[BMA20] R. A. Brealey, S. C. Myers, and F. Allen. _Principles of
+corporate finance_. 13th ed. McGraw-Hill/Irwin Boston et al., 2020.
+
 [FPS18] C. Fuest, A. Peichl, and S. Siegloch. "Do higher corporate
 taxes reduce wages? Micro evidence from Germany". In: _American
 Economic Review_ 108.2 (2018), pp. 393-418.
 
 [Gru16] J. Gruber. _Public finance and public policy_. 5th ed.
 Macmillan, 2016.
-
-[HL15] F. Heider and A. Ljungqvist. "As certain as debt and taxes:
-Estimating the tax sensitivity of leverage from state tax changes". In:
-_Journal of financial economics_ 118.3 (2015), pp. 684-712.
 
 [HZ17] O. Hart and L. Zingales. "Companies should maximize shareholder
 welfare not market value". In: _ECGI-Finance Working Paper_ (2017).
@@ -451,6 +457,10 @@ welfare not market value". In: _ECGI-Finance Working Paper_ (2017).
 class:middle
 # Referências
 &lt;small&gt;
+[HL15] F. Heider and A. Ljungqvist. "As certain as debt and taxes:
+Estimating the tax sensitivity of leverage from state tax changes". In:
+_Journal of financial economics_ 118.3 (2015), pp. 684-712.
+
 [LLS21] M. Leandro Meyer, C. Lucinda, and H. Spolador. "The payroll tax
 exemption in Brazil: Structural and quasi-experimental perspectives".
 In: _Revista Brasileira de Economia_ 75 (2021), pp. 37-63.
@@ -467,16 +477,16 @@ Journal: Economic Policy_ 10.2 (2018), pp. 272-301.
 [SSS19] E. Saez, B. Schoefer, and D. Seim. "Payroll taxes, firm
 behavior, and rent sharing: Evidence from a young workers' tax cut in
 Sweden". In: _American Economic Review_ 109.5 (2019), pp. 1717-63.
-
-[SZ16] J. C. Suárez Serrato and O. Zidar. "Who benefits from state
-corporate tax cuts? A local labor markets approach with heterogeneous
-firms". In: _American Economic Review_ 106.9 (2016), pp. 2582-2624.
 &lt;/small&gt;
 
 ---
 class:middle
 # Referências
 &lt;small&gt;
+[SZ16] J. C. Suárez Serrato and O. Zidar. "Who benefits from state
+corporate tax cuts? A local labor markets approach with heterogeneous
+firms". In: _American Economic Review_ 106.9 (2016), pp. 2582-2624.
+
 [TWZ18] T. R. Tørsløv, L. S. Wier, and G. Zucman. _The missing profits
 of nations_. Tech. rep. National Bureau of Economic Research, 2018.
 
